objects/ssot__InventoryTransfer__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DestinationLocationId__c</fullName>
        <label>Destination Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedPickupDateTime__c</fullName>
        <label>Expected Pickup DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Inventory Transfer Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InventoryRequestId__c</fullName>
        <label>Inventory Request</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InventoryRequestItemId__c</fullName>
        <label>Inventory Request Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InventoryTransferNumber__c</fullName>
        <label>Inventory Transfer Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InventoryTransferRecordMode__c</fullName>
        <label>Inventory Transfer Record Mode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InventoryTransferStatus__c</fullName>
        <label>Inventory Transfer Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsProductSerialized__c</fullName>
        <label>Is Product Serialized</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsReceived__c</fullName>
        <label>Is Received</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastReferencedDateTime__c</fullName>
        <label>Last Referenced DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastViewedDateTime__c</fullName>
        <label>Last Viewed DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerObject__c</fullName>
        <label>Owner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityUOM__c</fullName>
        <label>Quantity Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReceivedById__c</fullName>
        <label>Received By Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReceivedByObject__c</fullName>
        <label>Received By Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReceivedQuantity__c</fullName>
        <label>Received Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ReturnOrderId__c</fullName>
        <label>Return Order</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReturnOrderProductId__c</fullName>
        <label>Return Order Product</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SentQuantity__c</fullName>
        <label>Sent Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ShipmentExpectedDlvrDateTime__c</fullName>
        <label>Shipment Expected Delivery DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ShipmentStatus__c</fullName>
        <label>Shipment Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShipmentTrackingNumber__c</fullName>
        <label>Shipment Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShipmentTrackingUrl__c</fullName>
        <label>Shipment Tracking Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceLocationId__c</fullName>
        <label>Source Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceLocationProductInvId__c</fullName>
        <label>Source Location Product Inventory Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__isSent__c</fullName>
        <label>is Sent</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1710432557074_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InventoryTransfer_SourceLocationId_m_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>InventoryTransfer_SourceLocationId_m_rel</relationshipLabel>
        <relationshipName>rel_1710432557074_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1710432577205_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InventoryTransfer_OwnerId_map_User_I_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>InventoryTransfer_OwnerId_map_User_I_rel</relationshipLabel>
        <relationshipName>rel_1710432577205_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1710432582370_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InventoryTransfer_SourceLocationProd_rel</label>
        <referenceTo>ssot__LocationProductInventory__dlm</referenceTo>
        <relationshipLabel>InventoryTransfer_SourceLocationProd_rel</relationshipLabel>
        <relationshipName>rel_1710432582370_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>